--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
         <a href="https://wa.me/6285864738403" target="_blank" class="animate__animated
           animate__bounceInLeft animate__delay-1s">whatsapp</a>
         <a href="mailto:luthfidhiyar16@gmail.com" target="_blank" class="animate__animated
-          animate__bounceInLeft animate__delay-2s">email</a>
+          animate__bounceInLeft animate__delay-2s">website</a>
+        <a href="mailto:luthfidhiyar16@gmail.com" target="_blank" class="animate__animated
+          animate__bounceInLeft animate__delay-3s">email</a>
         <a href="https://youtube.com/channel/UC_D0EpkrR5YpgmMOI2bvR3Q" target="_blank"
-          class="animate__animated animate__bounceInLeft animate__delay-3s">youtube</a>
+          class="animate__animated animate__bounceInLeft animate__delay-4s">youtube</a>
       </div>
 
       <!-- footer -->
