--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           class="animate__animated animate__bounceInLeft">instagram</a>
         <a href="https://wa.me/6285864738403" target="_blank" class="animate__animated
           animate__bounceInLeft animate__delay-1s">whatsapp</a>
-        <a href="mailto:luthfidhiyar16@gmail.com" target="_blank" class="animate__animated
+        <a href="https://luthfidhiyaramadhan.github.io/Portfolio-Tailwind/" target="_blank" class="animate__animated
           animate__bounceInLeft animate__delay-2s">website</a>
         <a href="mailto:luthfidhiyar16@gmail.com" target="_blank" class="animate__animated
           animate__bounceInLeft animate__delay-3s">email</a>
